<resources>
    <string name="app_name">Attendance App</string>
    <string name="login_title">Prijava</string>
    <string name="email_hint">Email (@fsre.sum.ba)</string>
    <string name="password_hint">Lozinka</string>
    <string name="login_button">Prijavi se</string>
    <string name="logout_button">Odjavi se</string>
    <string name="welcome_message">Dobrodošli u Attendance App</string>
    <string name="email_required">Email je obavezan</string>
    <string name="password_required">Lozinka je obavezna</string>
    <string name="invalid_email">Unesite valjan email</string>
    <string name="invalid_domain">Email mora biti sa domene fsre.sum.ba</string>
    <string name="password_min_length">Lozinka mora imati najmanje 6 karaktera</string>
    <string name="login_success">Uspješna prijava!</string>
    <string name="login_error">Greška pri prijavi</string>

    <!-- Top Navbar -->
    <string name="logout">Odjavi se</string>
    <string name="menu_description">Opcije</string>
    <string name="predavanja_empty">Nema predavanja za prikaz</string>
    <string name="nav_title_profile">Profil</string>
    <string name="nav_title_analytics">Povijest evidencija</string>
    <string name="nav_title_scan_qr">Skeniraj QR kod</string>
    <string name="nav_title_create_course">Novi kolegij</string>

    <!-- Profile -->
    <string name="profile_full_name">Ime i prezime</string>
    <string name="profile_index_label">Broj indexa</string>
    <string name="profile_study_label">Studij</string>
    <string name="profile_year_label">Godina</string>
    <string name="profile_my_courses">Moji kolegiji</string>
    <string name="profile_no_courses">Niste upisani ni na jedan kolegij.</string>
    <string name="profile_qr_title">Moj QR kod</string>
    <string name="profile_qr_subtitle">Prikaži ovaj QR kod profesoru za evidentiranje prisustva</string>
    <string name="profile_add_course">Dodaj kolegij</string>
    <string name="profile_qr_content_desc">Student QR kod</string>

    <!-- Settings -->
    <string name="settings_title">Postavke</string>
    <string name="settings_back">Nazad</string>
    <string name="settings_language">Jezik</string>
    <string name="settings_language_value_hr">Jezik: HR</string>
    <string name="settings_language_value_en">Jezik: EN</string>
    <string name="settings_language_hr">Hrvatski (HR)</string>
    <string name="settings_language_en">Engleski (EN)</string>

    <!-- Create Kolegij -->
    <string name="create_class_title">Novi kolegij</string>
    <string name="create_class_name">Naziv kolegija</string>
    <string name="create_class_study">Studij (npr. Računarstvo)</string>
    <string name="create_class_year">Godina (1, 2, 3...)</string>
    <string name="create_class_submit">KREIRAJ KOLEGIJ</string>

    <!-- Create Lecture placeholder -->
    <string name="create_lecture_title">Novo predavanje</string>
    <string name="create_lecture_desc">Ovdje će biti forma za kreiranje novog predavanja. Trenutno je ovo samo placeholder ekran.</string>
    <string name="create_lecture_button">Otvori formu (uskoro)</string>

    <!-- Profesor profile -->
    <string name="prof_profile_welcome">Dobrodošli profesore</string>
    <string name="prof_profile_loading">Učitavanje...</string>
    <string name="prof_profile_courses_title">Moji kolegiji:</string>

    <!-- Predavanje item -->
    <string name="item_predavanje_title">Naziv predavanja</string>
    <string name="item_predavanje_room">Učionica 101</string>
    <string name="item_predavanje_desc">Ovdje ide kratki opis predavanja koji može biti u više redova ako je potrebno.</string>
    <string name="item_predavanje_calendar">Kalendar</string>
    <string name="item_predavanje_date">18.01.2026. 19:54</string>

    <!-- Attendees dialog -->
    <string name="attendees_title">Prisutni studenti</string>
    <string name="attendees_empty">Nema evidentiranih studenata.</string>
    <string name="attendees_close">Zatvori</string>
    <string name="qr_dialog_title">QR kod predavanja</string>
    <string name="qr_dialog_attendees_cd">Popis prisutnih</string>
    <string name="qr_dialog_scan_cd">Skeniraj studenta</string>
    <string name="qr_dialog_window">Vrijedi od - do</string>
    <string name="qr_dialog_status">Status koda</string>
    <string name="qr_dialog_start">Početak: %1$s</string>
    <string name="qr_dialog_start_unavailable">Vrijeme početka nije dostupno.</string>
    <string name="qr_dialog_ready">QR spreman za skeniranje.</string>
    <string name="qr_dialog_generate_error">Greška pri generisanju QR koda.</string>
    <string name="qr_fragment_prompt">Skeniraj QR kod</string>
    <string name="qr_fragment_found">Predavanje: %1$s</string>
    <string name="qr_fragment_error">Greška: %1$s</string>
    <string name="qr_fragment_confirm_generic">Želite li evidentirati dolazak?</string>
    <string name="qr_fragment_confirm_date">Evidentirati dolazak za datum: %1$s</string>
    <string name="qr_fragment_positive">OK</string>
    <string name="qr_fragment_rescan">Ponovo skeniraj</string>
    <string name="qr_fragment_prompt_student">Skeniraj QR studenta</string>
    <string name="predavanja_header">Predavanja za kolegij:</string>
    <string name="predavanja_loading">Učitavanje...</string>
    <string name="predavanje_students_title">Studenti</string>
    <string name="predavanje_students_empty">Nema studenata za prikaz</string>
    <string name="predavanje_attendance_count">Dolazaka: %1$d</string>

    <!-- Auth / Register -->
    <string name="auth_register_link">Nemaš račun? Registriraj se</string>
    <string name="register_title">Registracija</string>
    <string name="register_button">Kreiraj račun</string>
    <string name="register_role_prompt">Ja sam</string>
    <string name="register_role_student">Student</string>
    <string name="register_role_professor">Profesor</string>
    <string name="register_first_name">Ime</string>
    <string name="register_last_name">Prezime</string>
    <string name="register_email">Email (@fsre.sum.ba)</string>
    <string name="register_password">Lozinka</string>
    <string name="register_password_confirm">Potvrdi lozinku</string>
    <string name="register_index_number">Broj indexa</string>
    <string name="register_study">Studij</string>
    <string name="register_year">Godina studija</string>
    <string name="error_required_field">Polje je obavezno</string>
    <string name="error_password_match">Lozinke se moraju podudarati</string>
    <string name="error_email_domain">Email mora biti sa domene fsre.sum.ba</string>
    <string name="register_success">Račun uspješno kreiran</string>
</resources>
